--- a/blog.html
+++ b/blog.html
@@ -114,7 +114,7 @@
                     <div class="blog_left_sidebar">
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_1.png" alt="">
+                                <img class="card-img rounded-0" src="img/blog/01.jpg" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -123,12 +123,12 @@
 
                             <div class="blog_details">
                                 <a class="d-inline-block" href="single-blog.html">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>New Medical practices -Lacroscopy</h2>
                                 </a>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Info about  new technique called  lacroscopy good in treating
+                                    appendix or kidneys.</p>
                                 <ul class="blog-info-link">
-                                    <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
+                                    <li><a href="#"><i class="far fa-user"></i> Dr.Sai Yuva Teja Gorthi</a></li>
                                     <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
                                 </ul>
                             </div>
@@ -136,7 +136,7 @@
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_2.png" alt="">
+                                <img class="card-img rounded-0" src="img/blog/02.jpg" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -145,20 +145,19 @@
 
                             <div class="blog_details">
                                 <a class="d-inline-block" href="single-blog.html">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>types of tumours</h2>
                                 </a>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Tumour</p>
                                 <ul class="blog-info-link">
-                                    <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
-                                    <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
+                                    <li><a href="#"><i class="far fa-user"></i> Dr Curtis</a></li>
+                                    <li><a href="#"><i class="far fa-comments"></i> 05 Comments</a></li>
                                 </ul>
                             </div>
                         </article>
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_3.png" alt="">
+                                <img class="card-img rounded-0" src="img/blog/03.png" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -167,20 +166,19 @@
 
                             <div class="blog_details">
                                 <a class="d-inline-block" href="single-blog.html">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>Types of diabetes</h2>
                                 </a>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Info complications caused by diabetes</p>
                                 <ul class="blog-info-link">
-                                    <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
-                                    <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
+                                    <li><a href="#"><i class="far fa-user"></i> Dr.Cuddle Junior</a></li>
+                                    <li><a href="#"><i class="far fa-comments"></i> 08 Comments</a></li>
                                 </ul>
                             </div>
                         </article>
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_4.png" alt="">
+                                <img class="card-img rounded-0" src="img/blog/04.png" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -189,20 +187,19 @@
 
                             <div class="blog_details">
                                 <a class="d-inline-block" href="single-blog.html">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>Hypertension and impacts</h2>
                                 </a>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Info about hypertension and impacts.</p>
                                 <ul class="blog-info-link">
-                                    <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
-                                    <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
+                                    <li><a href="#"><i class="far fa-user"></i>Dr Quincy Berkstead</a></li>
+                                    <li><a href="#"><i class="far fa-comments"></i> 09 Comments</a></li>
                                 </ul>
                             </div>
                         </article>
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_5.png" alt="">
+                                <img class="card-img rounded-0" src="img/blog/05.jpg" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -211,12 +208,11 @@
 
                             <div class="blog_details">
                                 <a class="d-inline-block" href="single-blog.html">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>Brain tumour</h2>
                                 </a>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Brain tumour-malignant ,Benign,chemotheraphy</p>
                                 <ul class="blog-info-link">
-                                    <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
+                                    <li><a href="#"><i class="far fa-user"></i> Dr.Asle Winston </a></li>
                                     <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
                                 </ul>
                             </div>
@@ -268,37 +264,37 @@
                             <ul class="list cat-list">
                                 <li>
                                     <a href="#" class="d-flex">
-                                        <p>Resaurant food</p>
+                                        <p>Diabetlogist</p>
                                         <p>(37)</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="d-flex">
-                                        <p>Travel news</p>
+                                        <p>Neurologist</p>
                                         <p>(10)</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="d-flex">
-                                        <p>Modern technology</p>
+                                        <p>General Physician</p>
                                         <p>(03)</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="d-flex">
-                                        <p>Product</p>
+                                        <p>Radiologist</p>
                                         <p>(11)</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="d-flex">
-                                        <p>Inspiration</p>
+                                        <p>Dermatology</p>
                                         <p>21</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="d-flex">
-                                        <p>Health Care (21)</p>
+                                        <p>nephrologist (21)</p>
                                         <p>09</p>
                                     </a>
                                 </li>
@@ -311,7 +307,7 @@
                                 <img src="img/post/post_1.png" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
-                                        <h3>From life was you fish...</h3>
+                                        <h3>Cancer impacts...</h3>
                                     </a>
                                     <p>January 12, 2019</p>
                                 </div>
@@ -320,7 +316,7 @@
                                 <img src="img/post/post_2.png" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
-                                        <h3>The Amazing Hubble</h3>
+                                        <h3>Tuberclosis</h3>
                                     </a>
                                     <p>02 Hours ago</p>
                                 </div>
@@ -329,7 +325,7 @@
                                 <img src="img/post/post_3.png" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
-                                        <h3>Astronomy Or Astrology</h3>
+                                        <h3>Diabetes</h3>
                                     </a>
                                     <p>03 Hours ago</p>
                                 </div>
@@ -338,7 +334,7 @@
                                 <img src="img/post/post_4.png" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
-                                        <h3>Asteroids telescope</h3>
+                                        <h3>tumour-malignant</h3>
                                     </a>
                                     <p>01 Hours ago</p>
                                 </div>
@@ -376,7 +372,7 @@
 
 
                         <aside class="single_sidebar_widget instagram_feeds">
-                            <h4 class="widget_title">Instagram Feeds</h4>
+                            <h4 class="widget_title">Feeds</h4>
                             <ul class="instagram_row flex-wrap">
                                 <li>
                                     <a href="#">
