--- a/index.html
+++ b/index.html
@@ -48,22 +48,7 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">about</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="Doctor.html">Doctors</a>
-                                </li>
-
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Pages
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="services.html">services</a>
-                                        <a class="dropdown-item" href="dep.html">depertments</a>
-                                        <a class="dropdown-item" href="elements.html">Elements</a>
-                                    </div>
+                                    <a class="nav-link" href="Doctor.html">chat</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
@@ -76,11 +61,21 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link" href="contact.html">DiscussionBoard</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Tips</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Guides</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">FAQ'S</a>
+                                </li>
+
                             </ul>
                         </div>
-                        <a class="btn_2 d-none d-lg-block" href="#">DialUs</a>
+                        <button type="button" class="btn btn-success">DialUs</button>
                     </nav>
                 </div>
             </div>
@@ -102,7 +97,9 @@
                             <p>We provide a platform to share knowledge, 
                                 look out at new advancements and access
                                 to journals </p>
-                            <a href="#" class="btn_2">JOIN US NOW</a>
+                                <br>
+
+                            <button type="button" class="btn btn-success">JoinUs</button>
 
                         </div>
                     </div>
@@ -123,7 +120,7 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-6 col-lg-6">
                     <div class="about_us_img">
-                        <img src="img/top_service.png" alt="">
+                        <img src="img/plant.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-5">
@@ -131,7 +128,7 @@
                         <h2>About us</h2>
                         <p> A knowledge sharing platform with Resources 
                             for Doctors</p>
-                        <a class="btn_2 " href="#">learn more</a>
+                        <button type="button" class="btn btn-success">Learn more</button>
                         <div class="banner_item">
                             <div class="single_item">
                                 <img src="img/icon/banner_1.svg" alt="">
