--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn_2 d-none d-lg-block" href="#">HOT LINE- 09856</a>
+                        <button type="button" class="btn btn-success">Hotline</button>
                     </nav>
                 </div>
             </div>
@@ -90,18 +90,54 @@
     <!-- Header part end-->
 
     <!-- breadcrumb start-->
-    <section class="breadcrumb_part breadcrumb_bg">
+    <section >
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb_iner">
-                        <div class="breadcrumb_iner_item">
-                            <h2>our blog</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <img src="img/lotofgreen.jpg"  style="width:100%"/>
+            <div class="centered"><h2 class="text-white">Our Blog</h2></div>
         </div>
+        <style>
+            .container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+/* Bottom left text */
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
+/* Top left text */
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+
+/* Top right text */
+.top-right {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+}
+
+/* Bottom right text */
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
+/* Centered text */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+        </style>
     </section>
     <!-- breadcrumb start-->
 
@@ -254,8 +290,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button class="button rounded-0 primary-bg text-white w-100 btn_1"
-                                    type="submit">Search</button>
+                                <button type="button" class="btn btn-success">Search</button>
                             </form>
                         </aside>
 
@@ -416,8 +451,7 @@
                                     <input type="email" class="form-control" onfocus="this.placeholder = ''"
                                         onblur="this.placeholder = 'Enter email'" placeholder='Enter email' required>
                                 </div>
-                                <button class="button rounded-0 primary-bg text-white w-100 btn_1"
-                                    type="submit">Subscribe</button>
+                                <button type="button" class="btn btn-success">Subscribe</button>
                             </form>
                         </aside>
                     </div>
