chat discussion board added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="Doctor.html">chat</a>
+                                    <a class="nav-link" href="chat.html">chat</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
@@ -61,7 +61,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">DiscussionBoard</a>
+                                    <a class="nav-link" href="DiscussionBoard.html">DiscussionBoard</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Tips</a>
