--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     <a class="nav-link" href="contact.html">Guides</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">FAQ'S</a>
+                                    <a class="nav-link" href="faq.html">FAQ'S</a>
                                 </li>
 
                             </ul>
