--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
                                     <a class="nav-link" href="DiscussionBoard.html">DiscussionBoard</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Tips</a>
+                                    <a class="nav-link" href="tips.html">Tips</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Guides</a>
-                                </li>
+                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="faq.html">FAQ'S</a>
                                 </li>
