--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                 <div class="col-lg-5 col-xl-5">
                     <div class="banner_text">
                         <div class="banner_text_iner">
-                            <h5>We are here for your </h5>
-                            <h1>Best Forum to 
-                                Connect Doctors
+                            <h5> </h5>
+                            <h1>One Stop for
+                                Doctors
                             </h1>
-                            <p>We provide a platform to share knowledge, 
-                                look out at new advancements and access
-                                to journals </p>
+                            <p>to exchange ideas,share experiences,obtain mentorship and keeping  
+                            abreast of the latest and greatest in the field of medical science.
+                            </p>
                                 <br>
 
                             <button type="button" class="btn btn-success">JoinUs</button>
