--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo1000.jpg" alt="logo"> </a>
+                        <a class="navbar-brand" href="index.html"> <img src="img/logo10000.jpg" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -193,8 +193,8 @@
                     <div class="single_feature">
                         <div class="single_feature_part">
                             <span class="single_feature_icon"><img src="img/icon/feature_2.svg" alt=""></span>
-                            <h4>Premium</h4>
-                            <p>Lot more features.</p>
+                            <h4>Strong Authentication</h4>
+                            <p>Only licensed doctors allowed.</p>
                         </div>
                     </div>
                 </div>
