--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="banner_img">
-                        <img src="img/banner_img.png" alt="">
+                        <img src="img/banner1.jpg" alt="">
                     </div>
                 </div>
             </div>
