--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h5> </h5>
-                            <h1>One Stop for
+                            <h1>One Stop Shop 
+for
                                 Doctors
                             </h1>
                             <p>to exchange ideas,share experiences,obtain mentorship and keeping  
